# ghcjs-slide

./: .gitignore  Makefile  README.markdown  ghcjs-slide.cabal  hs15.markdown  stack.yaml
app/: Filter.hs
src/: Common.hs  Makefile
