name:                ghcjs-slide
version:             0.1.0.0
synopsis:            GHCjs Slide
description:         Please see README.md
homepage:            http://github.com/MnO2/mno2.github.com
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable ghcjs-slide
  hs-source-dirs:      app
  main-is:             Filter.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , directory
                     , pandoc
                     , pandoc-types
                     , process
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MnO2/mno2.github.com
